// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Manual publishing script should throw an error if the token is missing 1`] = `"Registry token is missing. Publishing failed."`;

exports[`Manual publishing script should work correctly if expected options provided 1`] = `
Object {
  "appBuildUrl": "https://mock.getarchive.cc/12345.tar.gz",
  "appSlug": "mock-app",
  "appType": "webapp",
  "appVersion": "2.1.8-dev.12345",
  "buildCommit": undefined,
  "prepublishHook": undefined,
  "registryEditor": "Cozy",
  "registryToken": "registryTokenForTest123",
  "registryUrl": "https://mock.registry.cc",
  "sha256Sum": "fakeshasum5644545",
  "spaceName": "mock_space",
}
`;

exports[`Manual publishing script should work correctly if no space name provided 1`] = `
Object {
  "appBuildUrl": "https://mock.getarchive.cc/12345.tar.gz",
  "appSlug": "mock-app",
  "appType": "webapp",
  "appVersion": "2.1.8-dev.12345",
  "buildCommit": undefined,
  "prepublishHook": undefined,
  "registryEditor": "Cozy",
  "registryToken": "registryTokenForTest123",
  "registryUrl": "https://mock.registry.cc",
  "sha256Sum": "fakeshasum5644545",
  "spaceName": undefined,
}
`;

exports[`Manual publishing script should work correctly with default buildDir value "build" 1`] = `
Object {
  "appBuildUrl": "https://mock.getarchive.cc/12345.tar.gz",
  "appSlug": "mock-app",
  "appType": "webapp",
  "appVersion": "2.1.8-dev.12345",
  "buildCommit": undefined,
  "prepublishHook": undefined,
  "registryEditor": "Cozy",
  "registryToken": "registryTokenForTest123",
  "registryUrl": "https://mock.registry.cc",
  "sha256Sum": "fakeshasum5644545",
  "spaceName": "mock_space",
}
`;
